<resources>
    <string name="app_name">Language Cards</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="insert_card">Введите данные карточки</string>
    <string name="insert_theme">Выберите тему</string>
    <string name="sure_to_delete">Удалить?</string>
    <string name="remove">УДАЛИТЬ</string>
    <string name="cancel">ОТМЕНА</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Электронная почта</string>
    <string name="ok">OK</string>
    <string name="back">НАЗАД</string>
    <string name="prompt_username">Имя пользователя</string>
    <string name="action_login">ВОЙТИ</string>
    <string name="action_password">Пароль</string>
    <string name="action_authorization">Авторизация</string>
    <string name="prompt_repeat_password">Повторите пароль</string>
    <string name="action_registration">Зарегистрироваться</string>
    <string name="cards_stock">Stock</string>
    <string name="my_cards">My Cards</string>
    <string name="password">Пароль</string>
    <string name="edit">РЕДАКТИРОВАТЬ</string>
    <string name="action_send">ОТПРАВИТЬ</string>
    <string name="error_user_login">Вы ввели неверный пароль, либо данного пользователя не существует </string>
    <string name="no_connection">Отсутствует соединение, повторите попытку</string>
    <string name="error_con">Не удалось авторизироваться в программе</string>
    <string name="error_internet">Отсутствует соединение, повторите попытку</string>
    <string name="error_inet">An error occurred during networking</string>
    <string name="welcome">Добро пожаловать! Вы успешно зарегистрированы в программе.</string>
    <string name="banner_ad_unit_id">ca-app-pub-9016583513972837/6585260704</string>
    <string name="compose_shortcut_label">Language Cards</string>
    <string name="action_about_app">О приложении</string>
    <string name="authorized_person">Вы авторизированы в системе</string>
    <string name="exit">Выйти из системы</string>
    <string name="forget_passw">Забыли пароль?</string>
    <string name="to_main_activity">Вернуться на главную страницу</string>
    <string name="action_main">На главную страницу</string>
    <string name="action_auth">Авторизироваться</string>
    <string name="action_sync_offline_cards">Синхронизировать карточки</string>
    <string name="sync_cards_text">Синхронизировать карточки, занесенные в offline режиме, с вашим аккаунтом?</string>
    <string name="action_sync_cards">Синхронизация</string>
    <string name="not_authorized">Вы не авторизированы в программе. Для сохранения карточек необходимо авторизироваться.</string>
    <string name="sync_ok">Карточки успешно синхронизированы</string>
    <string name="sync_cancel">Не удалось синхронизировать карточки. Отсутсвует соединение с сервером.</string>
    <string name="delete_cancel">Удаление карточки возможно только при подключении к сети</string>
    <string name="add_card">ДОБАВИТЬ КАРТОЧКУ</string>
    <string name="linkify_me">carpediemsolution@gmail.com</string>
    <string name="you_are_authorized">Вы авторизированы в системе,</string>
    <string name="no_connection_with_server">, отсутствует соединение с сервером.</string>
    <string name="log_out_message">Внимание! Карточки привязаны к вашей учетной записи.Совершая выход из аккаунта, вы теряете возможность просматривать карточки до следующего входа в систему.</string>
    <string name="color_primary">#558B2F</string>
    <string name="color_accent">#37474F</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="admob">ca-app-pub-9016583513972837/6213707105</string>
    <string name="info">Функционал приложения позволяет вам создавать свои карточки с новыми для вас словами и примерами их использования. \n  \nТакже вы можете добавлять необходимые вам карточки из базы в свой список. \n  \nКликая по таким карточкам, вы можете посмотреть их перевод. Таким образом, у вас есть возможность учить именно те слова, которые нужны именно вам. \n  \nКроме того, новые карточки вы можете разделить по тематическим блокам, тем самым упрощая поиск нужных слов.\n \nВ приложении возможна авторизация пользователя, что делает возможным изучение английского языка с нескольких устройств. \n  \nЕсли карточки были созданы вами в неавторизированном состоянии, при авторизации данные карточки автоматически привязываются к вашему аккаунту. Таким образом, данные не будут потеряны, если вы примете решение авторизироваться по прошествии какого-то времени с начала пользования приложением. \n  \nТакже приложение доступно в офлайн-режиме, тем самым, делает возможным изучение английского языка не зависимо от вашего местоположения.\n  \nДлительное нажатие на карточку позволяет перейти к функционалу редактирования \" +                 \"и удаления карточки. \n  \nПриятным бонусом является наличие более 5000 слов в базе программы. Количество слов в базе постоянно увеличивается. \n  \nПо всем вопросам вы всегда можете обратиться по адресу carpediemsolution@gmail.com \n  \n  \n  \n</string>
    <string name="admob_for_insert_activity">cca-app-pub-9016583513972837/6074106306</string>
    <string name="insert_login">Введите логин</string>
    <string name="insert_password">Введите пароль</string>
    <string name="error_null">Null</string>
    <string name="invalid_format">Invalid format</string>
    <string name="not_equal">passwords are not equal</string>
    <string name="already_authorized">, вы уже авторизированы в системе</string>
    <string name="invalid_pass_email">Неверный логин или email</string>
    <string name="password_is_sent">Пароль отправлен на вашу почту</string>
    <string name="inet_failture">Отсутствует соединение, повторите попытку</string>
    <string name="recycler_view_admob">ca-app-pub-9016583513972837/7013639106</string>


    <string-array name="titles_graph_tab">
        <item> Culture and Art</item>
        <item>Modern technologies</item>
        <item>Society and Politics</item>
        <item>Adventure travel</item>
        <item>Nature and Weather</item>
        <item>Education and Profession</item>
        <item>Appearance and Character</item>
        <item>Clothes and Fashion</item>
        <item>Sport</item>
        <item>Family and Relationship</item>
        <item>The order of the day</item>
        <item>Hobbies and Free time</item>
        <item>Customs and Traditions</item>
        <item>Shopping</item>
        <item>Food and Drinks</item>
    </string-array>

</resources>






